# CMakeQt

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  QuickRectangle.cpp  QuickRectangle.h  README.md  main.cpp  main.qml  patch.cpp
